# PomoLyth

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  run.ps1
ai/: IAiClient.h  MockAiClient.cpp  MockAiClient.h  OpenAiClient.cpp  OpenAiClient.h  PromptBuilder.cpp  PromptBuilder.h  ReviewGenerator.cpp  ReviewGenerator.h  TaskPlanner.cpp  TaskPlanner.h
app/: Application.cpp  Application.h  main.cpp
config/: app_config.json  blacklist.json  whitelist.json
core/: AchievementSystem.cpp  AchievementSystem.h  EventBus.cpp  EventBus.h  FocusSessionManager.cpp  FocusSessionManager.h  PetStateMachine.cpp  PetStateMachine.h  PomodoroTimer.cpp  PomodoroTimer.h
models/: AppEvent.h  DistractionEvent.h  FocusSession.h  FocusTask.h  PetProfile.h
monitor/: FocusMonitor.cpp  FocusMonitor.h  IWindowMonitor.h  InputActivityMonitor.cpp  InputActivityMonitor.h  WindowsWindowMonitor.cpp  WindowsWindowMonitor.h
storage/: JsonStorage.cpp  JsonStorage.h  SQLiteStorage.cpp  SQLiteStorage.h  UserMemory.cpp  UserMemory.h
ui/: DashboardWindow.cpp  DashboardWindow.h  DesktopCalendarWindow.cpp  DesktopCalendarWindow.h  MainWindow.cpp  MainWindow.h  PetWidget.cpp  PetWidget.h  PetWindow.cpp  PetWindow.h  ReviewDialog.cpp  ReviewDialog.h  SettingsDialog.cpp  SettingsDialog.h  TimerPanel.cpp  TimerPanel.h  pink_theme.qss
